If mailing address matches service or home address, leave it out of application